//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  email String [unique, not null]
  username String [unique, not null]
  full_name String [not null]
  birth_date DateTime
  phone_number String
  hash String
  role user_identity_role_enum
  nis String
  nip String
  kelas_id String
  jadwal jadwal [not null]
  is_verified Boolean [not null, default: false]
  is_online Boolean [not null, default: false]
  last_activity DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  kelas kelas
  materi materi [not null]
}

Table kelas {
  id String [pk]
  nama_kelas String [not null]
  tingkat Int [not null]
  wali_kelas String
  user user [not null]
  kelas_mapel kelas_mapel [not null]
  jadwal jadwal [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
}

Table kelas_mapel {
  id String [pk]
  kelas_id String [not null]
  mapel_id String [not null]
  kelas kelas [not null]
  mapel mapel [not null]
}

Table mapel {
  id String [pk]
  nama_mapel String [not null]
  deskripsi String [not null]
  kelas_mapel kelas_mapel [not null]
  jadwal jadwal [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  materi materi [not null]
}

Table jadwal {
  id String [pk]
  kelas_id String [not null]
  mapel_id String [not null]
  guru_id String
  hari String [not null]
  jam_mulai DateTime [not null]
  jam_selesai DateTime [not null]
  kelas kelas [not null]
  mapel mapel [not null]
  guru user
}

Table materi {
  id String [pk]
  judul String [not null]
  deskripsi String
  file_url String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  guru_id String [not null]
  guru user [not null]
  mapel_id String [not null]
  mapel mapel [not null]
}

Table announcement {
  id String [pk]
  title String [not null]
  body String [not null]
}

Enum user_identity_role_enum {
  siswa
  guru
  admin
}

Ref: user.kelas_id > kelas.id [delete: Set Null]

Ref: kelas_mapel.kelas_id > kelas.id [delete: Cascade]

Ref: kelas_mapel.mapel_id > mapel.id [delete: Cascade]

Ref: jadwal.kelas_id > kelas.id [delete: Cascade]

Ref: jadwal.mapel_id > mapel.id [delete: Cascade]

Ref: jadwal.guru_id > user.id [delete: Cascade]

Ref: materi.guru_id > user.id [delete: Cascade]

Ref: materi.mapel_id > mapel.id [delete: Cascade]